feat: через pom.xml интегрирован JavaFX, создан файл main.fxml и контроллер для него MainController, также изменен Main для запуска JavaFX, приложение теперь имеет оболочку и оконный вид, начинается работа над переопределнием классов и методов для работы с GUI вместо консольной логики, после чего будет разрабатываться дизайн с использованием css.(JavaFX является мощной современной библиотекой для создания GUI, поэтому я решил использовать ее в моем проекте)